--- a/style/main.css
+++ b/style/main.css
@@ -21,11 +21,15 @@ html {
   background-image: linear-gradient(0,var(--light-color)1%, var(--prim-color));
   margin-bottom: 1em;
 }
+.container .nav a{
+  text-decoration: none;
+  color: var(--text-color);
+}
 
 .title {
   margin-bottom: 0.5em;
   margin-top: 0.5em;
-  color: var(--text-colo);
+  color: var(--text-color);
 }
 
 .cards-container{
